# ascii-engine

./: .clang-format  CMakeLists.txt  main.cpp
Exceptions/: RenderException.cpp  RenderException.h
Graphics/: Render.cpp  Render.h
src/: main.cpp
src/Entities/: Cube.cpp  Cube.h
src/Exceptions/: RenderException.cpp  RenderException.h
src/Factories/: EntityFactory.cpp  EntityFactory.h
src/Game/: Actor.cpp  Actor.h  EntityAlive.cpp  EntityAlive.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
src/Game/Entities/: Actor.cpp  Actor.h
src/Graphics/: IRender.h  Render.cpp  Render.h
src/Graphics/Renders/: ASCIIRender.cpp  ASCIIRender.h
src/IO/: IInput.h  InputManager.cpp  InputManager.h  KeyCodes.h
src/IO/Controllers/: ActorController.cpp  ActorController.h
src/IO/Handlers/: Input.cpp  Input.h
src/Logger/: Logger.cpp  Logger.h
src/Scenes/: TestScene.cpp  TestScene.h
src/Utils/: Console.cpp  Console.h
src/core/engine/: Engine.cpp  Engine.h
src/core/engine/io/: IInput.h  InputReceiver.cpp  InputReceiver.h  KeyCodes.h
src/core/engine/scheduler/: Scheduler.cpp  Scheduler.h
src/core/engine/utils/: Console.cpp  Console.h
src/core/graphics/: IRender.h  Renderer.cpp  Renderer.h
src/ecs/component/: Health.h  Position.h  Size.h  Sprite.h
src/ecs/entity/: EntityManager.h
src/ecs/system/: ActorController.cpp  ActorController.h  Canvas.cpp  Canvas.h
